--- a/trunk/jsidplay2/res/jsidplay2.html.tmpl
+++ b/trunk/jsidplay2/res/jsidplay2.html.tmpl
@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
 	<META name="author" content="Ken Händel"/>
-	<LINK REL="SHORTCUT ICON" HREF="http://jsidplay2.sourceforge.net/jsidplay2.png" /> 
+	<LINK REL="SHORTCUT ICON" /> 
 	<TITLE />
 </HEAD>
 <BODY bgcolor="#ffffff" text="#000000" link="#0000ff" alink="#ff0000" vlink="#400040">
