--- a/trunk/jsidplay2/res/jsidplay2.jnlp.tmpl
+++ b/trunk/jsidplay2/res/jsidplay2.jnlp.tmpl
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <!-- JNLP File for JSIDPlay2 -->
-<jnlp spec="1.0+" codebase="http://jsidplay2.sourceforge.net/">
+<jnlp spec="1.0+">
    <information>
       <title>JSIDPlay2</title>
       <vendor>Ken Händel</vendor>
