--- a/trunk/jsidplay2/res/jsidplay2.jnlp.tmpl
+++ b/trunk/jsidplay2/res/jsidplay2.jnlp.tmpl
@@ -18,7 +18,7 @@
    </security>
    <update check="background" policy="prompt-update"/>
    <resources>
-	<j2se version="1.7+" href="http://java.sun.com/products/autodl/j2se"/>
+	<j2se version="1.7+" max-heap-size="512m" href="http://java.sun.com/products/autodl/j2se"/>
 
    </resources>
    <resources os="Windows" arch="x86_64 x86">
