--- a/trunk/jsidplay2/res/jsidplay2.jnlp.tmpl
+++ b/trunk/jsidplay2/res/jsidplay2.jnlp.tmpl
@@ -21,9 +21,9 @@
 	<j2se version="1.7+" max-heap-size="512m" href="http://java.sun.com/products/autodl/j2se"/>
 
    </resources>
-   <resources os="Windows" arch="x86_64 x86">
+   <resources os="Windows" arch="x86 x86_64 amd64">
    </resources>
-   <resources os="Linux" arch="i386 ia64 x84_64">
+   <resources os="Linux" arch="x86 i386 ia64 x84_64 amd64">
    </resources>
    <resources os="Mac OS">
    </resources>
