--- a/jsidplay2/src/ui/console/Console.fxml
+++ b/jsidplay2/src/ui/console/Console.fxml
@@ -2,10 +2,14 @@
 
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.VBox?>
+<?import ui.console.ConsoleOutput?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml">
-	<TextArea editable="false" fx:id="console"
-		AnchorPane.bottomAnchor="10" AnchorPane.leftAnchor="10"
-		AnchorPane.rightAnchor="10" AnchorPane.topAnchor="10" />
+	<VBox AnchorPane.bottomAnchor="10" AnchorPane.leftAnchor="10"
+		AnchorPane.rightAnchor="10" AnchorPane.topAnchor="10">
+		<ConsoleOutput fx:id="out" />
+		<ConsoleOutput fx:id="err" />
+	</VBox>
 </AnchorPane>
 
