--- a/jsidplay2/src/ui/console/Console.fxml
+++ b/jsidplay2/src/ui/console/Console.fxml
@@ -4,12 +4,18 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.VBox?>
 <?import ui.console.ConsoleOutput?>
+<?import javafx.scene.layout.BorderPane?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml">
-	<VBox AnchorPane.bottomAnchor="10" AnchorPane.leftAnchor="10"
-		AnchorPane.rightAnchor="10" AnchorPane.topAnchor="10">
-		<ConsoleOutput fx:id="out" />
-		<ConsoleOutput fx:id="err" />
-	</VBox>
+	<BorderPane AnchorPane.bottomAnchor="10"
+		AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10"
+		AnchorPane.topAnchor="10">
+		<top>
+			<ConsoleOutput fx:id="out" />
+		</top>
+		<bottom>
+			<ConsoleOutput fx:id="err" />
+		</bottom>
+	</BorderPane>
 </AnchorPane>
 
