--- a/trunk/jsidplay2/src/ui/diskcollection/DiskCollection.fxml
+++ b/trunk/jsidplay2/src/ui/diskcollection/DiskCollection.fxml
@@ -14,6 +14,7 @@
 <?import javafx.scene.image.Image?>
 <?import ui.directory.Directory?>
 <?import javafx.scene.control.ScrollPane?>
+<?scenebuilder-preview-i18n-resource DiskCollection.properties?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml">
 	<GridPane>
