--- a/jsidplay2/src/ui/about/About.fxml
+++ b/jsidplay2/src/ui/about/About.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.HBox?>
+<?scenebuilder-preview-i18n-resource About.properties?>
 
 <Scene xmlns:fx="http://javafx.com/fxml" width="1024" height="768">
 	<BorderPane>
