--- a/jsidplay2/src/ui/disassembler/Disassembler.fxml
+++ b/jsidplay2/src/ui/disassembler/Disassembler.fxml
@@ -12,6 +12,7 @@
 <?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.GridPane?>
+<?scenebuilder-preview-i18n-resource Disassembler.properties?>
 
 <Scene xmlns:fx="http://javafx.com/fxml">
 	<HBox>
