--- a/jsidplay2/src/ui/favorites/Favorites.fxml
+++ b/jsidplay2/src/ui/favorites/Favorites.fxml
@@ -17,6 +17,7 @@
 <?import ui.favorites.FavoritesTab?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.control.TextField?>
+<?scenebuilder-preview-i18n-resource Favorites.properties?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml">
 	<fx:define>
