--- a/jsidplay2/src/ui/favorites/FavoritesTab.fxml
+++ b/jsidplay2/src/ui/favorites/FavoritesTab.fxml
@@ -17,6 +17,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import ui.favorites.FavoritesCellFactory?>
+<?scenebuilder-preview-i18n-resource FavoritesTab.properties?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml">
 	<BorderPane AnchorPane.bottomAnchor="10"
