--- a/jsidplay2/src/ui/gamebase/GameBasePage.fxml
+++ b/jsidplay2/src/ui/gamebase/GameBasePage.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
+<?scenebuilder-preview-i18n-resource GameBasePage.properties?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml">
 	<TableView fx:id="gamebaseTable" AnchorPane.bottomAnchor="10"
