--- a/jsidplay2/src/ui/musiccollection/MusicCollection.fxml
+++ b/jsidplay2/src/ui/musiccollection/MusicCollection.fxml
@@ -25,6 +25,8 @@
 <?import javafx.scene.control.Menu?>
 <?import ui.common.TypeTextField?>
 <?import ui.musiccollection.TuneInfoRowFactory?>
+<?scenebuilder-preview-i18n-resource MusicCollection.properties?>
+
 <AnchorPane xmlns:fx="http://javafx.com/fxml">
 	<GridPane>
 		<CheckBox text="%AUTO_CONFIGURATION" fx:id="autoConfiguration"
