--- a/trunk/jsidplay2/src/main/resources/ui/console/ConsoleOutput.fxml
+++ b/trunk/jsidplay2/src/main/resources/ui/console/ConsoleOutput.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
+<?scenebuilder-preview-i18n-resource ConsoleOutput.properties?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml">
 	<TitledPane fx:id="titledPane" collapsible="false"
