highlight currently played tab and tune in the favorites tab

--- a/jsidplay2/src/main/resources/ui/JSidPlay2.css
+++ b/jsidplay2/src/main/resources/ui/JSidPlay2.css
@@ -45,9 +45,13 @@
 	-fx-font-size:12.0px;
 }
 
-.fileNotFoundCellValue
+.fileNotFoundRow
 {
 	-fx-background-color:red;
+}
+.currentlyPlayedRow
+{
+	-fx-text-fill: blue;
 }
 
 .errorConsole {
